[TESTS][DATA][UIMAP][HELPER] fixed tests for MultipleAddressesCheckout & GiftWrapping

--- a/fixture/default/core/Mage/Checkout/data/MultipleAddressesCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/data/MultipleAddressesCheckout.yml
@@ -138,8 +138,22 @@ multiple_login: &login
 #                    Order Data with Register Customer                         #
 #                                                                              #
 ################################################################################
+products_to_add_with_qty: &products_to_add_with_qty
+    product_1:
+        product_name: %product_1%
+        options:
+            option_1:
+                options_to_choose:
+                    product_qty: 2
+    product_2:
+        product_name: %product_2%
+        options:
+            option_1:
+                options_to_choose:
+                    product_qty: 2
+
 multiple_with_register:
-    products_to_add:
+    products_to_add: &products_to_add
         product_1:
             product_name: %product_1%
             options: %option_product_1%
@@ -226,13 +240,7 @@ multiple_with_register:
             payment_method: Check / Money order
 
 multiple_with_register_france:
-    products_to_add:
-        product_1:
-            product_name: %product_1%
-            options: %option_product_1%
-        product_2:
-            product_name: %product_2%
-            options: %option_product_2%
+    products_to_add: *products_to_add
     checkout_as_customer: *register
     general_customer_data:
         first_name: %randomize%_first_name
@@ -293,13 +301,7 @@ multiple_with_register_france:
 #                                                                              #
 ################################################################################
 multiple_with_signed_in:
-    products_to_add:
-        product_1:
-            product_name: %product_1%
-            options: %option_product_1%
-        product_2:
-            product_name: %product_2%
-            options: %option_product_2%
+    products_to_add: *products_to_add
     general_customer_data:
         first_name: %randomize%_first_name
         last_name: %randomize%_last_name
@@ -317,13 +319,7 @@ multiple_with_signed_in:
     payment_data: *payment_data
 
 multiple_with_signed_in_france:
-    products_to_add:
-        product_1:
-            product_name: %product_1%
-            options: %option_product_1%
-        product_2:
-            product_name: %product_2%
-            options: %option_product_2%
+    products_to_add: *products_to_add
     general_customer_data:
         first_name: %randomize%_first_name
         last_name: %randomize%_last_name
@@ -345,13 +341,7 @@ multiple_with_signed_in_france:
 #                                                                              #
 ################################################################################
 multiple_with_login:
-    products_to_add:
-        product_1:
-            product_name: %product_1%
-            options: %option_product_1%
-        product_2:
-            product_name: %product_2%
-            options: %option_product_2%
+    products_to_add: *products_to_add
     checkout_as_customer: *login
     general_customer_data:
         first_name: %randomize%_first_name
@@ -370,13 +360,7 @@ multiple_with_login:
     payment_data: *payment_data
 
 multiple_with_login_france:
-    products_to_add:
-        product_1:
-            product_name: %product_1%
-            options: %option_product_1%
-        product_2:
-            product_name: %product_2%
-            options: %option_product_2%
+    products_to_add: *products_to_add
     checkout_as_customer: *login
     general_customer_data:
         first_name: %randomize%_first_name
