--- a/dev/tests/integration/phpunit.xml.dist
+++ b/dev/tests/integration/phpunit.xml.dist
@@ -10,7 +10,7 @@
  * @license     {license_link}
  */
 -->
-<phpunit bootstrap="./framework/bootstrap.php" clors="true">
+<phpunit bootstrap="./framework/bootstrap.php" colors="true">
     <!-- Test suites definition -->
     <testsuites>
         <testsuite name="Magento Integration Tests">
