--- a/dev/tests/unit/phpunit.xml.dist
+++ b/dev/tests/unit/phpunit.xml.dist
@@ -10,7 +10,7 @@
  * @license     {license_link}
  */
 -->
-<phpunit bootstrap="./framework/bootstrap.php" clors="true">
+<phpunit bootstrap="./framework/bootstrap.php" colors="true">
     <testsuite name="Magento Unit Tests">
         <directory suffix="Test.php">testsuite</directory>
     </testsuite>
