--- a/fixture/default/core/Mage/Checkout/uimap/frontend/MultipleAddressesCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/uimap/frontend/MultipleAddressesCheckout.yml
@@ -380,10 +380,10 @@ checkout_multishipping_review_order:
                             card_data: //table
                 -
                     shipping_address_info:
-                        xpath: //div[h2='Shipping Information']
+                        xpath: //div[@class='col2-set'][not(h2='Billing Information')]
                         pageelements:
-                            shipping_method_address_header: /h3[%number%]
-                            shipping_method_address: //div[contains(@class,'col-narrow')][%number%]//address
+                            shipping_method_address_header: "[%number%]/h3"
+                            shipping_method_address: "[%number%]//address"
                 -
                     shipping_address:
                         xpath: //h3[text()='%addressHeader%']/following-sibling::*/div[contains(div/h4,'Shipping To')]
@@ -398,7 +398,7 @@ checkout_multishipping_review_order:
                             shipping_method: //p
                 -
                     order_items:
-                        xpath: //h3[text()='%addressHeader%']/following-sibling::div[contains(h4,'Items')][1]
+                        xpath: //*[text()='%addressHeader%']/following::div[contains(*/text(),'Items')][1]
                         links:
                             edit_items: //a[text()='Edit Items']
                             open_product: //a[text()='productName']
