--- a/fixture/default/core/Mage/Checkout/data/MultipleAddressesCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/data/MultipleAddressesCheckout.yml
@@ -161,7 +161,7 @@ multiple_with_register:
             product_name: %product_2%
             options: %option_product_2%
     checkout_as_customer: *register
-    general_customer_data:
+    general_customer_data: &general_customer_data_register
         first_name: %randomize%_first_name
         last_name: %randomize%_last_name
         email: multiple_checkout_%randomize%@unknown-domain.com
@@ -178,7 +178,7 @@ multiple_with_register:
         password: 123123q
         password_confirmation: 123123q
     shipping_data: &shipping_data
-        address_data_1:
+        address_data_1: &shipping_address_data_1
             address:
                 first_name: John
                 last_name: Doe
@@ -236,28 +236,29 @@ multiple_with_register:
                 region: %noValue%
                 zip_code: 90064
                 country: United States
+                set_default_billing_address: Yes
+                set_default_shipping_address: Yes
         payment:
             payment_method: Check / Money order
+
+multiple_with_register_virtual:
+    products_to_add: *products_to_add
+    checkout_as_customer: *register
+    general_customer_data: *general_customer_data_register
+    shipping_data: &shipping_data_virtual
+        address_data_1: *shipping_address_data_1
+        address_data_2:
+            products:
+                product_1:
+                    product_name: %product_2%
+                    product_qty: 2
+            gift_options: %gift_options_address2%
+    payment_data: *payment_data
 
 multiple_with_register_france:
     products_to_add: *products_to_add
     checkout_as_customer: *register
-    general_customer_data:
-        first_name: %randomize%_first_name
-        last_name: %randomize%_last_name
-        email: multiple_checkout_%randomize%@unknown-domain.com
-        sign_up_newsletter: No
-        company: %noValue%
-        telephone: 732-757-2923
-        street_address_1: street_address_%randomize%
-        street_address_2: suite %randomize%
-        city: Los Angelos
-        state: California
-        region: %noValue%
-        zip_code: 90064
-        country: United States
-        password: 123123q
-        password_confirmation: 123123q
+    general_customer_data: *general_customer_data_register
     shipping_data: &shipping_data_france
         address_data_1:
             address: *shipping_france_1
@@ -279,22 +280,30 @@ multiple_with_register_france:
                 shipping_service: Flat Rate
                 shipping_method: Fixed
             gift_options: %gift_options_address2%
-    payment_data:
-        billing_address:
-                first_name: Charlie
-                last_name: Pane
-                company: %noValue%
-                telephone: 732-757-2923
-                fax: %noValue%
-                street_address_1: street_address_3
-                street_address_2: suite 3
-                city: Los Angelos
-                state: California
-                region: %noValue%
-                zip_code: 90064
-                country: United States
-        payment:
-            payment_method: Check / Money order
+    payment_data: *payment_data
+
+multiple_with_register_france_virtual:
+    products_to_add: *products_to_add
+    checkout_as_customer: *register
+    general_customer_data: *general_customer_data_register
+    shipping_data: &shipping_data_france_virtual
+        address_data_1:
+            address: *shipping_france_1
+            products:
+                product_1:
+                    product_name: %product_1%
+                    product_qty: 2
+            shipping:
+                shipping_service: Flat Rate
+                shipping_method: Fixed
+            gift_options: %gift_options_address1%
+        address_data_2:
+            products:
+                product_1:
+                    product_name: %product_2%
+                    product_qty: 2
+            gift_options: %gift_options_address2%
+    payment_data: *payment_data
 ################################################################################
 #                                                                              #
 #               Order Data for Signed in  Customer                             #
@@ -302,7 +311,7 @@ multiple_with_register_france:
 ################################################################################
 multiple_with_signed_in:
     products_to_add: *products_to_add
-    general_customer_data:
+    general_customer_data: &general_customer_data_signed_in
         first_name: %randomize%_first_name
         last_name: %randomize%_last_name
         company: %noValue%
@@ -318,22 +327,22 @@ multiple_with_signed_in:
     shipping_data: *shipping_data
     payment_data: *payment_data
 
+multiple_with_signed_in_virtual:
+    products_to_add: *products_to_add
+    general_customer_data: *general_customer_data_signed_in
+    shipping_data: *shipping_data_virtual
+    payment_data: *payment_data
+
 multiple_with_signed_in_france:
     products_to_add: *products_to_add
-    general_customer_data:
-        first_name: %randomize%_first_name
-        last_name: %randomize%_last_name
-        company: %noValue%
-        telephone: 732-757-2923
-        fax: %noValue%
-        street_address_1: street_address_%randomize%
-        street_address_2: suite %randomize%
-        city: Los Angelos
-        state: California
-        region: %noValue%
-        zip_code: 90064
-        country: United States
+    general_customer_data: *general_customer_data_signed_in
     shipping_data: *shipping_data_france
+    payment_data: *payment_data
+
+multiple_with_signed_in_france_virtual:
+    products_to_add: *products_to_add
+    general_customer_data: *general_customer_data_signed_in
+    shipping_data: *shipping_data_france_virtual
     payment_data: *payment_data
 ################################################################################
 #                                                                              #
@@ -343,7 +352,7 @@ multiple_with_signed_in_france:
 multiple_with_login:
     products_to_add: *products_to_add
     checkout_as_customer: *login
-    general_customer_data:
+    general_customer_data: &general_customer_data_login
         first_name: %randomize%_first_name
         last_name: %randomize%_last_name
         company: %noValue%
@@ -359,21 +368,23 @@ multiple_with_login:
     shipping_data: *shipping_data
     payment_data: *payment_data
 
+multiple_with_login_virtual:
+    products_to_add: *products_to_add
+    checkout_as_customer: *login
+    general_customer_data: *general_customer_data_login
+    shipping_data: *shipping_data_virtual
+    payment_data: *payment_data
+
 multiple_with_login_france:
     products_to_add: *products_to_add
     checkout_as_customer: *login
-    general_customer_data:
-        first_name: %randomize%_first_name
-        last_name: %randomize%_last_name
-        company: %noValue%
-        telephone: 732-757-2923
-        fax: %noValue%
-        street_address_1: street_address_%randomize%
-        street_address_2: suite %randomize%
-        city: Los Angelos
-        state: California
-        region: %noValue%
-        zip_code: 90064
-        country: United States
+    general_customer_data: *general_customer_data_login
     shipping_data: *shipping_data_france
+    payment_data: *payment_data
+
+multiple_with_login_france_virtual:
+    products_to_add: *products_to_add
+    checkout_as_customer: *login
+    general_customer_data: *general_customer_data_login
+    shipping_data: *shipping_data_france_virtual
     payment_data: *payment_data
