[TESTS][HELPER][DATA][UIMAP] MAUTOSEL-259 - Merged branch MAUTOSEL-259-16

--- a/fixture/default/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
@@ -377,6 +377,7 @@ create_order_for_new_customer:
         buttons:
             back: //button[span='Back']
             cancel: //button[span='Cancel']
+            submit_order: //button[span='Submit Order']
         messages: *orderMessages
 
 reorder_create_new_order:
