--- a/fixture/enterprise/core/Mage/SystemConfiguration/data/GiftMessage.yml
+++ b/fixture/enterprise/core/Mage/SystemConfiguration/data/GiftMessage.yml
@@ -126,6 +126,56 @@ gift_options_disable_all:
             allow_gift_printered_card: No
             default_price_for_printed_card: ''
 
+gift_options_enable_all_website:
+    configuration_scope: Main Website
+    tab_1:
+        tab_name: sales_sales
+        configuration:
+            allow_gift_messages_on_order_level_use_default: No
+            allow_gift_messages_for_order_items_use_default: No
+            allow_gift_wrapping_on_order_level_use_default: No
+            allow_gift_wrapping_for_order_items_use_default: No
+            allow_gift_receipt_use_default: No
+            allow_gift_printered_card_use_default: No
+            default_price_for_printed_card_use_default: No
+            allow_gift_messages_on_order_level: Yes
+            allow_gift_messages_for_order_items: Yes
+            allow_gift_wrapping_on_order_level: Yes
+            allow_gift_wrapping_for_order_items: Yes
+            allow_gift_receipt: Yes
+            allow_gift_printered_card: Yes
+            default_price_for_printed_card: 18.53
+
+gift_options_disable_all_website:
+    configuration_scope: Main Website
+    tab_1:
+        tab_name: sales_sales
+        configuration:
+            allow_gift_wrapping_on_order_level_use_default: No
+            allow_gift_wrapping_for_order_items_use_default: No
+            allow_gift_receipt_use_default: No
+            allow_gift_printered_card_use_default: No
+            default_price_for_printed_card_use_default: No
+            allow_gift_messages_on_order_level: No
+            allow_gift_messages_for_order_items: No
+            allow_gift_wrapping_on_order_level: No
+            allow_gift_wrapping_for_order_items: No
+            allow_gift_receipt: No
+            allow_gift_printered_card: No
+
+gift_options_enable_all_default_config:
+    configuration_scope: Default Config
+    tab_1:
+        tab_name: sales_sales
+        configuration:
+            allow_gift_messages_on_order_level: Yes
+            allow_gift_messages_for_order_items: Yes
+            allow_gift_wrapping_on_order_level: Yes
+            allow_gift_wrapping_for_order_items: Yes
+            allow_gift_receipt: Yes
+            allow_gift_printered_card: Yes
+            default_price_for_printed_card: 18.53
+
 ind_items_all_yes_order_all_no:
     configuration_scope: Default Config
     tab_1:
