Fixed MAGETWO-1124: Data Fixtures for Performance Testing - added support for fixtures in performance tests - added data fixture, extracted from previously deleted SQL dump - moved testing scenarios that have no fixtures to "samples" folder

--- a/dev/tests/performance/config.php.dist
+++ b/dev/tests/performance/config.php.dist
@@ -34,6 +34,7 @@ return array(
         'admin_password'             => '123123q', // must be at least of 7 both numeric and alphanumeric characters
     ),
     'scenario_files' => glob(__DIR__ . '/testsuite/*test.jmx'),
+    'fixtures' => glob(__DIR__ . '/testsuite/fixtures/*.php'),
     'scenario_params' => array(
         'host'  => '127.0.0.1',
         'path'  => '/magento/',
