--- a/fixture/enterprise/core/Mage/Checkout/data/SalesOrder.yml
+++ b/fixture/enterprise/core/Mage/Checkout/data/SalesOrder.yml
@@ -49,11 +49,14 @@ order_gift_options_full:
         customer_group: General
         customer_email: %noValue%
     products_to_add:
-        product_1: &product
-            filter_sku: %noValue%
+        product_1:
+            filter_sku: %product1%
             configurable_options: %noValue%
             product_qty: %noValue%
-        product_2: %noValue%
+        product_2:
+            filter_sku: %product2%
+            configurable_options: %noValue%
+            product_qty: %noValue%
     coupons:
         coupon_1: %noValue%
     billing_addr_data: *billingReqUsa
@@ -73,13 +76,13 @@ order_gift_options_full:
             add_printed_card: Yes
         individual_item:
             product_1:
-                sku_product: %noValue%
+                sku_product: %product1%
                 from: from_%randomize%
                 to: to_%randomize%
                 message: message_%randomize%
                 gift_wrapping_design: %noValue%
             product_2:
-                sku_product: %noValue%
+                sku_product: %product2%
                 from: from_%randomize%
                 to: to_%randomize%
                 message: message_%randomize%
